--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -1,1 +1,50 @@
-.header-main {}
+.header-main {
+    position: absolute;
+    z-index: 20;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: $padding-x2 0;
+
+    &__inner {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    &__lang {
+        color: $color-gray1;
+        text-decoration: none;
+        font-size: 15px;
+        margin: 0 $padding 0 0;
+    }
+    &__registration {
+        font-weight: 500;
+        font-size: 15px;
+        line-height: 14px;
+        color: $color-gray1;
+        border: 2px solid $color-link;
+        border-radius: 12px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        padding: $padding $padding-x2;
+        text-decoration: none;
+
+        &:hover {
+            color: $color-white;
+            background-color: $color-link;
+        }
+    }
+}
+
+.menu-top {
+    display: flex;
+    align-items: center;
+
+    &__link {
+        color: $color-gray1;
+        text-decoration: none;
+        font-size: 15px;
+        margin: 0 $padding-x2 0 0;
+    }
+}
