--- a/src/styles/base/_normalize.scss
+++ b/src/styles/base/_normalize.scss
@@ -16,10 +16,12 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
 	margin: 0;
-	font: 400 20px/1.3 Arial, sans-serif;
-	color: $color-black;
+	font: 400 14px/17px 'Montserrat', sans-serif;
+	letter-spacing: -.015em;
+	color: $color-text;
 	text-align: left;
 	background-color: $color-white;
+	background: $color-white url(../img/tmp.png) no-repeat center top;
 }
 
 h1, h2, h3, h5, h6,
@@ -66,14 +68,14 @@ sup {
 }
 
 a {
-    color: $color-black;
-    text-decoration: none;
+    color: $color-link;
+    text-decoration: underline;
     outline: none;
     transition: .5s;
 }
 
 a:hover {
-	color: $color-black;
+	color: $color-link;
 	text-decoration: none;
 }
 
