--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,17 +3,16 @@
 
 // Переменные, миксины, функции
 @import "helpers/variables";
-@import "helpers/mixins";
-@import "helpers/functions";
+//@import "helpers/mixins";
+//@import "helpers/functions";
 @import "helpers/grid";
 
 // CSS-файлы библиотек
-@import "vendor/libs";
+//@import "vendor/libs";
 
 // Основное
 @import "base/fonts";
 @import "base/normalize";
-@import "base/general";
 
 // БЭМ-блоки
 @import "../blocks/modules";
