--- a/src/views/index.html
+++ b/src/views/index.html
@@ -13,6 +13,7 @@
         @@include("../blocks/modules/header/header.html")
         @@include("../blocks/modules/block-first/block-first.html")
         @@include("../blocks/modules/footer/footer.html")
+        <script src="local/js/vendor.js"></script>
         <script src="local/js/main.js"></script>
     </body>
 </html>
