work and team blocks

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -26,15 +26,28 @@ $color-link: #4BA6FA;
 
 $color-gray1: #222;
 $color-gray2: #4A4A4A;
+$color-gray3: #373737;
 
 $opacity1: rgba(0, 0, 0, 0.15);
 $opacity2: rgba(0, 0, 0, 0.1);
 $opacity3: rgba(255, 255, 255, 0.3);
 $opacity4: rgba(67, 92, 115, 0.16);
 $opacity5: rgba(75, 124, 250, 0.3);
-$opacity-blue: rgba(75, 166, 250, 0.6);
+$opacity6: rgba(75, 166, 250, 0.22);
+$opacity7: rgba(75, 166, 250, 0.6);
+$opacity8: rgba(97, 255, 113, 0.39);
+$opacity9: rgba(148, 203, 255, 0.2);
 
 $gradient-color1: #4BDAFA;
 $gradient-color2: #4B7CFA;
 $gradient-color3: #04D2FF;
 $gradient-color4: #1053FF;
+
+$color-cloud1: #ABFCB9;
+$color-cloud2: #E3FFE6;
+$color-cloud3: #E2F1FF;
+$color-cloud4: #9DD0FF;
+$color-cloud5: #9BDCE7;
+
+$color1: #2AD53B;
+$color2: #2888E0;
