--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -41,6 +41,14 @@
 @font-face {
 	font-family: 'Nunito Sans';
 	src: local('Nunito Sans'),
+         url('../fonts/NunitoSans-Black.woff2') format('woff2');
+	font-weight: 900;
+	font-style: normal;
+    font-display: swap;
+}
+@font-face {
+	font-family: 'Nunito Sans';
+	src: local('Nunito Sans'),
          url('../fonts/NunitoSans-BlackItalic.woff2') format('woff2');
 	font-weight: 900;
 	font-style: italic;
