--- a/src/styles/base/_normalize.scss
+++ b/src/styles/base/_normalize.scss
@@ -8,6 +8,7 @@ html {
 	font-family: sans-serif;
 	line-height: 1.15;
     width: 100%;
+	scroll-behavior: smooth;
 }
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
