--- a/src/views/index.html
+++ b/src/views/index.html
@@ -12,6 +12,8 @@
     <body>
         @@include("../blocks/modules/header/header.html")
         @@include("../blocks/modules/block-first/block-first.html")
+        @@include("../blocks/modules/block-work/block-work.html")
+        @@include("../blocks/modules/block-team/block-team.html")
         @@include("../blocks/modules/footer/footer.html")
         <script src="local/js/vendor.js"></script>
         <script src="local/js/main.js"></script>
