--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -1,6 +1,8 @@
 @import "modules/header/header";
-@import "modules/footer/footer";
 
 @import "modules/block-first/block-first";
 @import "modules/block-work/block-work";
 @import "modules/block-team/block-team";
+@import "modules/block-rate/block-rate";
+
+@import "modules/footer/footer";
