--- a/src/styles/elems/btns.scss
+++ b/src/styles/elems/btns.scss
@@ -58,8 +58,18 @@
             }
         }
 
+        &_middle {
+            padding: 16px 60px;
+        }
         &_long {
             padding: 16px 70px;
+        }
+        &_full-width {
+            width: 100%;
+        }
+
+        &_no-border::before {
+            display: none;
         }
     }
 
