--- a/src/views/index.html
+++ b/src/views/index.html
@@ -14,6 +14,7 @@
         @@include("../blocks/modules/block-first/block-first.html")
         @@include("../blocks/modules/block-work/block-work.html")
         @@include("../blocks/modules/block-team/block-team.html")
+        @@include("../blocks/modules/block-rate/block-rate.html")
         @@include("../blocks/modules/footer/footer.html")
         <script src="local/js/vendor.js"></script>
         <script src="local/js/main.js"></script>
