--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -4,5 +4,6 @@
 @import "modules/block-work/block-work";
 @import "modules/block-team/block-team";
 @import "modules/block-rate/block-rate";
+@import "modules/block-clients/block-clients";
 
 @import "modules/footer/footer";
