--- a/src/views/index.html
+++ b/src/views/index.html
@@ -15,6 +15,7 @@
         @@include("../blocks/modules/block-work/block-work.html")
         @@include("../blocks/modules/block-team/block-team.html")
         @@include("../blocks/modules/block-rate/block-rate.html")
+        @@include("../blocks/modules/block-clients/block-clients.html")
         @@include("../blocks/modules/footer/footer.html")
         <script src="local/js/vendor.js"></script>
         <script src="local/js/main.js"></script>
