--- a/src/blocks/modules/block-rate/block-rate.scss
+++ b/src/blocks/modules/block-rate/block-rate.scss
@@ -1,5 +1,5 @@
 .block-rate {
-    margin: -42px 0 123px;
+    margin: -42px 0 133px;
 
     &__items {
         display: flex;
@@ -12,24 +12,24 @@
         position: relative;
         padding: 44px 24px 24px;
         width: 400px;
-        background: #FFFFFF;
-        box-shadow: 0px 20px 50px rgba(148, 203, 255, 0.2);
+        background: $color-white;
+        box-shadow: 0px 20px 50px $opacity9;
         border-radius: 12px 32px;
 
         &__act {
             padding: 6px 16px;
             border-radius: 100px 0px;
             font-weight: 600;
-            color: #FFF;
+            color: $color-white;
             position: absolute;
             left: 0;
             top: 0;
 
             &_pink {
-                background-color: #F96BB7;
+                background-color: $color-pink;
             }
             &_green {
-                background-color: #53E962;
+                background-color: $color-green;
             }
         }
         &__top {
@@ -61,19 +61,19 @@
             font-weight: 700;
             font-size: 20px;
             letter-spacing: .02em;
-            color: #373737;
+            color: $color-gray3;
             display: flex;
             align-items: center;
             justify-content: center;
         }
         &__sale {
             padding: 4px 6px;
-            background-color: #53E962;
+            background-color: $color-green;
             border-radius: 8px;
             font-weight: 600;
             font-size: 12px;
             line-height: 15px;
-            color: #FFFFFF;
+            color: $color-white;
             margin: 0 0 0 8px;
             letter-spacing: -.015em;
         }
