--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -20,6 +20,7 @@ $gutter: 30px;
 $color-black: #000;
 $color-white: #FFF;
 $color-green: #53E962;
+$color-pink: #F96BB7;
 
 $color-text: #434343;
 $color-link: #4BA6FA;
