--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -24,6 +24,7 @@ $color-pink: #F96BB7;
 
 $color-text: #434343;
 $color-link: #4BA6FA;
+$color-footer: #E5F1FD;
 
 $color-gray1: #222;
 $color-gray2: #4A4A4A;
