Мобилка закончена без шапки

--- a/src/blocks/modules/block-first/block-first.scss
+++ b/src/blocks/modules/block-first/block-first.scss
@@ -40,7 +40,6 @@
 
         &__item {
             display: flex;
-            display: flex;
             align-items: center;
             margin: 0 16px;
         }
@@ -171,6 +170,40 @@
             &-icon {
                 width: 19px;
                 height: 22px;
+            }
+        }
+    }
+
+    @include media-breakpoint-down(sm)
+	{
+        & {
+            padding: 110px 0 70px;
+
+            &__logo {
+                margin: 0 0 16px;
+                width: 160px;
+            }
+            &__desc {
+                font-size: 16px;
+                margin: 16px 0;
+            }
+
+            &-soc__icon {
+                height: 24px;
+                width: 24px;
+                margin: 0 8px;
+            }
+
+            &-items {
+                padding: 16px 0 40px;
+                flex-direction: column;
+
+                &__item {
+                    margin: 0 0 8px;
+                }
+                &__text {
+                    font-size: 16px;
+                }
             }
         }
     }
