--- a/src/styles/elems/title-line.scss
+++ b/src/styles/elems/title-line.scss
@@ -45,4 +45,17 @@
 			left: 105px;
 		}
 	}
+
+	@include media-breakpoint-down(sm)
+	{
+		&_hide-sm {
+
+			&::after,
+			&::before,
+			& > *::after,
+			& > *::before {
+				display: none;
+			}
+		}
+	}
 }
