--- a/src/views/index.html
+++ b/src/views/index.html
@@ -11,11 +11,13 @@
     </head>
     <body>
         @@include("../blocks/modules/header/header.html")
-        @@include("../blocks/modules/block-first/block-first.html")
-        @@include("../blocks/modules/block-work/block-work.html")
-        @@include("../blocks/modules/block-team/block-team.html")
-        @@include("../blocks/modules/block-rate/block-rate.html")
-        @@include("../blocks/modules/block-clients/block-clients.html")
+        <main class="main-main">
+            @@include("../blocks/modules/block-first/block-first.html")
+            @@include("../blocks/modules/block-work/block-work.html")
+            @@include("../blocks/modules/block-team/block-team.html")
+            @@include("../blocks/modules/block-rate/block-rate.html")
+            @@include("../blocks/modules/block-clients/block-clients.html")
+        </main>
         @@include("../blocks/modules/footer/footer.html")
         <script src="local/js/vendor.js"></script>
         <script src="local/js/main.js"></script>
