--- a/src/blocks/modules/block-clients/block-clients.scss
+++ b/src/blocks/modules/block-clients/block-clients.scss
@@ -19,4 +19,29 @@
     &__img {
         max-height: 100%;
     }
+
+    @include media-breakpoint-between(md, lg)
+	{
+        & {
+            min-height: 400px;
+            padding: 50px 0 0;
+            background-position: center top;
+        }
+    }
+    @include media-breakpoint-down(sm)
+	{
+        & {
+            min-height: 0;
+            padding: 70px 0 96px;
+
+            &__carousel {
+                margin: 32px 0 0;
+            }
+            &__slide {
+                width: 82px;
+                height: 82px;
+                margin: 0 8px;
+            }
+        }
+    }
 }
