--- a/src/blocks/modules/footer/footer.scss
+++ b/src/blocks/modules/footer/footer.scss
@@ -76,6 +76,52 @@
             }
         }
     }
+
+    @include media-breakpoint-down(md)
+	{
+        &-top {
+            align-items: center;
+            flex-direction: column;
+
+            &__logo {
+                margin: 0 auto 24px;
+            }
+            &__right {
+                width: 100%;
+                margin: 32px 0 0;
+                flex-wrap: wrap;
+                justify-content: space-between;
+            }
+        }
+        &-bottom {
+            flex-direction: column-reverse;
+
+            &__left {
+                margin: 16px 0 0;
+            }
+            &__link {
+                margin: 0 16px;
+            }
+        }
+    }
+    @include media-breakpoint-down(sm)
+	{
+        &-top {
+            margin: 0;
+        }
+        &-bottom {
+
+            &__left {
+                margin: 0;
+            }
+            &__right {
+                flex-direction: column;
+            }
+            &__link {
+                margin: 0 0 16px;
+            }
+        }
+    }
 }
 
 .menu-bottom {
@@ -91,5 +137,26 @@
         margin: 12px 0 0;
         color: $color-text;
         text-decoration: none;
+    }
+
+    @include media-breakpoint-only(lg)
+	{
+        & {
+            margin: 0 0 0 24px;
+        }
+    }
+    @include media-breakpoint-only(md)
+	{
+        & {
+            margin: 0;
+            width: calc(25% - 8px);
+        }
+    }
+    @include media-breakpoint-down(sm)
+	{
+        & {
+            margin: 0 0 16px;
+            width: calc(50% - 8px);
+        }
     }
 }
