--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -35,6 +35,13 @@
             background-color: $color-link;
         }
     }
+
+    @include media-breakpoint-down(sm)
+	{
+        & {
+            display: none;
+        }
+    }
 }
 
 .menu-top {
