--- a/src/styles/base/_normalize.scss
+++ b/src/styles/base/_normalize.scss
@@ -48,6 +48,19 @@ h2, .h2 {
 	}
 }
 
+@include media-breakpoint-down(sm)
+{
+	h1, .h1 {
+		font-size: 32px;
+		line-height: 44px;
+	}
+	
+	h2, .h2 {
+		font-size: 24px;
+		line-height: 34px;
+	}
+}
+
 h3, h5, h6,
 .h3, .h5, .h6 {
 	margin: 0 0 1.5rem;
