--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -38,20 +38,142 @@
 
     @include media-breakpoint-down(sm)
 	{
-        & {
+        &__registration {
             display: none;
         }
     }
 }
 
-.menu-top {
-    display: flex;
-    align-items: center;
+.menu-top-btn {
+    display: none;
 
+    @include media-breakpoint-down(sm)
+	{
+        & {
+            display: flex;
+            width: 32px;
+            height: 32px;
+            align-items: center;
+            justify-content: center;
+
+            &__icon,
+            &__icon::after,
+            &__icon::before {
+                background-color: $color-black;
+                height: 2px;
+                width: 22px;
+            }
+            &__icon {
+                position: relative;
+
+                &::before,
+                &::after {
+                    content: "";
+                    position: absolute;
+                }
+                &::before {
+                    top: -7px;
+                }
+                &::after {
+                    bottom: -7px;
+                }
+            }
+        }
+    }
+}
+
+.menu-top {
+
+    &__inner {
+        display: flex;
+        align-items: center;
+    }
     &__link {
         color: $color-gray1;
         text-decoration: none;
         font-size: 15px;
         margin: 0 24px 0 0;
+    }
+    &__top,
+    &__registration {
+        display: none;
+    }
+
+    @include media-breakpoint-down(sm)
+	{
+        & {
+            position: fixed;
+            z-index: 50;
+            left: -100%;
+            top: 0;
+            width: 100%;
+            bottom: 0;
+            background-color: $color-white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            padding: 22px 15px 32px;
+            transition: .5s;
+
+            &_open {
+                left: 0;
+            }
+
+            &__top {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                width: 100%;
+            }
+            &__close {
+                width: 32px;
+                height: 32px;
+                position: relative;
+
+                &::after,
+                &::before {
+                    background-color: $color-black;
+                    height: 2px;
+                    width: 28px;
+                    content: "";
+                    position: absolute;
+                    top: 50%;
+                    margin: -1px 0 0 1px;
+                }
+                &::before {
+                    transform: rotate(45deg);
+                }
+                &::after {
+                    transform: rotate(135deg);
+                }
+            }
+            &__lang {
+                font-size: 15px;
+                color: $color-gray1;
+                text-decoration: none;
+            }
+            &__inner {
+                margin: auto;
+                flex-direction: column;
+            }
+            &__link {
+                font-size: 18px;
+                margin: 0 0 48px;
+            }
+            &__registration {
+                display: block;
+                font-weight: 500;
+                font-size: 15px;
+                line-height: 18px;
+                color: $color-gray1;
+                padding: 10px 24px;
+                border: 2px solid $color-link;
+                border-radius: 8px 24px;
+                width: 100%;
+                text-align: center;
+                text-decoration: none;
+            }
+        }
     }
 }
