--- a/src/styles/base/_normalize.scss
+++ b/src/styles/base/_normalize.scss
@@ -155,7 +155,7 @@ textarea {
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
-    outline: none;
+    outline: none !important;
 }
 
 button,
