--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 // Элементы
 @import "elems/title-line";
 @import "elems/btns";
+@import "elems/form-one";
 
 // БЭМ-блоки
 @import "../blocks/modules";
