--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,6 +19,7 @@
             @@include("../blocks/modules/block-clients/block-clients.html")
         </main>
         @@include("../blocks/modules/footer/footer.html")
+        @@include("../blocks/modules/window-one/window-one.html")
         <script src="local/js/vendor.js"></script>
         <script src="local/js/main.js"></script>
     </body>
