--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 @import "elems/title-line";
 @import "elems/btns";
 @import "elems/form-one";
+@import "elems/close-icon";
 
 // БЭМ-блоки
 @import "../blocks/modules";
