--- a/src/blocks/modules/window-one/window-one.scss
+++ b/src/blocks/modules/window-one/window-one.scss
@@ -24,6 +24,7 @@
         &-icon {
             width: 48px;
             height: 48px;
+            pointer-events: none;
         }
     }
     &__title {
@@ -34,6 +35,29 @@
         text-align: center;
         color: $color-black;
         margin: 0 0 48px;
+    }
+
+    @include media-breakpoint-down(sm)
+	{
+        & {
+            width: 100%;
+            top: 0;
+            position: absolute;
+            border: none;
+            border-radius: 0;
+            height: 100%;
+            padding: 24px;
+            justify-content: center;
+
+            &__close {
+                top: 15px;
+                left: 15px;
+            }
+            &__title {
+                font-size: 28px;
+                line-height: 38px;
+            }
+        }
     }
 }
 
