--- a/src/blocks/modules/block-team/block-team.scss
+++ b/src/blocks/modules/block-team/block-team.scss
@@ -144,6 +144,7 @@
         & {
             padding: 157px 0 75px;
             background-size: cover;
+            overflow: hidden;
 
             &__desc {
                 font-size: 24px;
@@ -164,17 +165,23 @@
             }
 
             &-items {
-                flex-wrap: nowrap;
-                margin: 0 -15px;
-                overflow-x: scroll;
-                padding: 0 7px;
+                margin: 0;
+
+                &__viewport {
+                    position: relative;
+                    max-width: 100%;
+                    max-height: 100%;
+                }
             }
 
             &-item {
                 width: 250px;
-                margin: 0 8px 50px;
+                margin: 0 16px 50px 0;
                 min-width: 250px;
 
+                &:last-child {
+                    margin-right: 0;
+                }
                 &__top {
                     margin: 0 0 12px;
                     flex-direction: column;
