--- a/src/blocks/modules/block-rate/block-rate.scss
+++ b/src/blocks/modules/block-rate/block-rate.scss
@@ -1,5 +1,6 @@
 .block-rate {
-    margin: -42px 0 133px;
+    position: relative;
+    margin: -142px 0 133px;
 
     &__items {
         display: flex;
