--- a/src/blocks/modules/block-work/block-work.scss
+++ b/src/blocks/modules/block-work/block-work.scss
@@ -19,6 +19,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        position: relative;
         font-size: 18px;
         line-height: 22px;
         margin: 0 0 76px;
